feat: implement functional tests
