# api/docs/swagger.yaml
@@ -17,6 +17,7 @@ definitions:
       product:
         $ref: '#/definitions/models.Product'
       quantity:
+        format: int32
         minimum: 1
         type: integer
     required:
@@ -34,6 +35,7 @@ definitions:
         maxLength: 255
         type: string
       price:
+        format: float
         minimum: 0
         type: number
       title:
@@ -46,6 +48,7 @@ definitions:
     - price
     - title
     type: object
+host: localhost:8000
 info:
   contact:
     email: max.guzman@icloud.com
@@ -53,12 +56,42 @@ info:
   description: A fun sticker store REST API
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
+    url: https://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: https://swagger.io/terms/
   title: Stickerfy API
   version: "1.0"
 paths:
-  /order:
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: Get all exists orders.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: get all exists orders
+      tags:
+      - Order
     post:
       consumes:
       - application/json
@@ -73,182 +106,49 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.Order'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
       summary: create a new order
       tags:
       - Order
-  /orders:
-    get:
-      consumes:
-      - application/json
-      description: Get all exists orders.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Product'
-            type: array
-      summary: get all exists orders
-      tags:
-      - Order
-  /product:
+  /products:
     delete:
       consumes:
       - application/json
       description: Delete product.
-      parameters:
-      - description: Product ID
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      - description: Image Path
-        in: body
-        name: image_path
-        required: true
-        schema:
-          type: string
-      - description: Title
-        in: body
-        name: title
-        required: true
-        schema:
-          type: string
-      - description: Description
-        in: body
-        name: description
-        required: true
-        schema:
-          type: string
-      - description: Price
-        in: body
-        name: price
-        required: true
-        schema:
-          type: number
       produces:
       - application/json
       responses:
-        "204":
-          description: ok
+        "200":
+          description: OK
           schema:
-            type: string
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
       summary: delete product
       tags:
       - Product
-    post:
-      consumes:
-      - application/json
-      description: Create a new product.
-      parameters:
-      - description: Image Path
-        in: body
-        name: image_path
-        required: true
-        schema:
-          type: string
-      - description: Title
-        in: body
-        name: title
-        required: true
-        schema:
-          type: string
-      - description: Description
-        in: body
-        name: description
-        required: true
-        schema:
-          type: string
-      - description: Price
-        in: body
-        name: price
-        required: true
-        schema:
-          type: number
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Product'
-      summary: create a new product
-      tags:
-      - Product
-    put:
-      consumes:
-      - application/json
-      description: Update product.
-      parameters:
-      - description: Product ID
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      - description: Image Path
-        in: body
-        name: image_path
-        required: true
-        schema:
-          type: string
-      - description: Title
-        in: body
-        name: title
-        required: true
-        schema:
-          type: string
-      - description: Description
-        in: body
-        name: description
-        required: true
-        schema:
-          type: string
-      - description: Price
-        in: body
-        name: price
-        required: true
-        schema:
-          type: number
-      produces:
-      - application/json
-      responses:
-        "202":
-          description: ok
-          schema:
-            type: string
-      summary: update product
-      tags:
-      - Product
-  /product/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get product by given ID.
-      parameters:
-      - description: Product ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Product'
-      summary: get product by given ID
-      tags:
-      - Product
-  /products:
     get:
       consumes:
       - application/json
@@ -259,15 +159,102 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.Product'
-            type: array
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
       summary: get all exists products
       tags:
       - Product
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
+    post:
+      consumes:
+      - application/json
+      description: Create a new product.
+      parameters:
+      - description: Product
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/models.Product'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: create a new product
+      tags:
+      - Product
+    put:
+      consumes:
+      - application/json
+      description: Update product.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: update product
+      tags:
+      - Product
+  /products/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get product by given ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: get product by given ID
+      tags:
+      - Product
 swagger: "2.0"
