# api/pkg/controllers/product_controller.go
@@ -41,13 +41,16 @@ func NewProductController(ctx context.Context, productService services.ProductSe
 }
 
 // GetAll returns all products
-// @Description Get all exists products.
-// @Summary get all exists products
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Success 200 {array} models.Product
-// @Router /products [get]
+
+//	@Description	Get all exists products.
+//	@Summary		get all exists products
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}
+//	@Failure		400	{object}	map[string]interface{}
+//	@Failure		500	{object}	map[string]interface{}
+//	@Router			/products [get]
 func (pc *productController) GetAll(c *fiber.Ctx) error {
 	cachedProducts, err := pc.productsCache.Get(pc.context, "products")
 	if err == redis.Nil {
@@ -68,7 +71,11 @@ func (pc *productController) GetAll(c *fiber.Ctx) error {
 		}
 		encodedProducts, err := json.Marshal(products)
 		if err != nil {
-			return err
+			return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+				"products": nil,
+				"error":    true,
+				"msg":      "there was an error unmarshaling the products",
+			})
 		}
 		err = pc.productsCache.Set(pc.context, "products", encodedProducts, time.Minute*5)
 		if err != nil {
@@ -112,14 +119,16 @@ func (pc *productController) GetAll(c *fiber.Ctx) error {
 }
 
 // Get returns a product by id
-// @Description Get product by given ID.
-// @Summary get product by given ID
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Param id path string true "Product ID"
-// @Success 200 {object} models.Product
-// @Router /product/{id} [get]
+//
+//	@Description	Get product by given ID.
+//	@Summary		get product by given ID
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}
+//	@Failure		400	{object}	map[string]interface{}
+//	@Failure		500	{object}	map[string]interface{}
+//	@Router			/products/{id} [get]
 func (pc *productController) GetByID(c *fiber.Ctx) error {
 	id, err := uuid.Parse(c.Params("id"))
 	if err != nil {
@@ -147,17 +156,17 @@ func (pc *productController) GetByID(c *fiber.Ctx) error {
 }
 
 // New creates a new product
-// @Description Create a new product.
-// @Summary create a new product
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Param image_path body string true "Image Path"
-// @Param title body string true "Title"
-// @Param description body string true "Description"
-// @Param price body number true "Price"
-// @Success 200 {object} models.Product
-// @Router /product [post]
+//
+//	@Description	Create a new product.
+//	@Summary		create a new product
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Param			product	body		models.Product	true	"Product"
+//	@Success		201		{object}	map[string]interface{}
+//	@Failure		400		{object}	map[string]interface{}
+//	@Failure		500		{object}	map[string]interface{}
+//	@Router			/products [post]
 func (pc *productController) Post(c *fiber.Ctx) error {
 	var product models.Product
 	product.ID = uuid.New()
@@ -177,7 +186,7 @@ func (pc *productController) Post(c *fiber.Ctx) error {
 		})
 	}
 
-	return c.Status(http.StatusOK).JSON(fiber.Map{
+	return c.Status(http.StatusCreated).JSON(fiber.Map{
 		"product": product,
 		"error":   false,
 		"msg":     nil,
@@ -185,18 +194,16 @@ func (pc *productController) Post(c *fiber.Ctx) error {
 }
 
 // Update updates a product
-// @Description Update product.
-// @Summary update product
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Param id body string true "Product ID"
-// @Param image_path body string true "Image Path"
-// @Param title body string true "Title"
-// @Param description body string true "Description"
-// @Param price body number true "Price"
-// @Success 202 {string} status "ok"
-// @Router /product [put]
+//
+//	@Description	Update product.
+//	@Summary		update product
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}
+//	@Failure		400	{object}	map[string]interface{}
+//	@Failure		500	{object}	map[string]interface{}
+//	@Router			/products [put]
 func (pc *productController) Update(c *fiber.Ctx) error {
 	var product models.Product
 	if err := c.BodyParser(&product); err != nil {
@@ -224,18 +231,16 @@ func (pc *productController) Update(c *fiber.Ctx) error {
 }
 
 // Delete deletes a product
-// @Description Delete product.
-// @Summary delete product
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Param id body string true "Product ID"
-// @Param image_path body string true "Image Path"
-// @Param title body string true "Title"
-// @Param description body string true "Description"
-// @Param price body number true "Price"
-// @Success 204 {string} status "ok"
-// @Router /product [delete]
+//
+//	@Description	Delete product.
+//	@Summary		delete product
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]interface{}
+//	@Failure		400	{object}	map[string]interface{}
+//	@Failure		500	{object}	map[string]interface{}
+//	@Router			/products [delete]
 func (pc *productController) Delete(c *fiber.Ctx) error {
 	var product models.Product
 	if err := c.BodyParser(&product); err != nil {
